--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <artifactId>jaxrs-api</artifactId>
             <version>3.0.12.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
 
     </dependencies>
 
